--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Homepage Paul Mayer"
+      content="Paul Mayer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" type="image/svg+xml"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
