--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.svg" type="image/svg+xml"/>
+    <link rel="icon" href="%PUBLIC_URL%/img/logo512.png" type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Paul Mayer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" type="image/svg+xml"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo512.png" type="image/png"/>
+    <link rel="manifest" href="%PUBLIC_URL%/img/manifest.json" />
     <title>Homepage Paul Mayer</title>
   </head>
   <body>
