--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/img/logo512.png" type="image/png"/>
+    <link rel="icon" href="%PUBLIC_URL%/img/logo.ico" size="any"/>
+    <link rel="icon" href="%PUBLIC_URL%/img/logo.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Paul Mayer"
+      content="Homepage Paul Mayer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo512.png" type="image/png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo-2.ico" type="image/png"/>
     <link rel="manifest" href="%PUBLIC_URL%/img/manifest.json" />
-    <title>Homepage Paul Mayer</title>
+    <title>Paul Mayer</title>
   </head>
   <body>
     <noscript>Please enable JavaScript to run this app.</noscript>
