making website work with generic blog articles

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/img/logo.ico" size="any"/>
     <link rel="icon" href="%PUBLIC_URL%/img/logo.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f6f6f6" />
     <meta
       name="description"
       content="Homepage Paul Mayer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo-2.ico" type="image/png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/img/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Paul Mayer</title>
   </head>
   <body>
